--- a/translations/kangyur/placeholders/103-002_toh4568-1-chapter_1_how_the_wheel_of_dharma_was_turned_and_history_of_the_compilation_of_the_teachings.xml
+++ b/translations/kangyur/placeholders/103-002_toh4568-1-chapter_1_how_the_wheel_of_dharma_was_turned_and_history_of_the_compilation_of_the_teachings.xml
@@ -12,11 +12,11 @@
                 <sponsor xml:id="UT22084-103-002-2">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-103-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -62,23 +62,25 @@
                 <change who="#line-tofte" when="2023-09-07T07:27:40.661Z" type="text-version" status="0.0.9" xml:id="UT22084-103-002-14">
                     <desc>Auto (update-contributors)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-12-16T16:09:04.457Z" type="translation-status" status="2.h" xml:id="UT22084-103-002-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:09:04.457Z" type="text-version" status="0.0.10" xml:id="UT22084-103-002-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-103-002-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-103-002-1"/>
                 <p tid="2">Toh 4568 ch. 1-5:</p>
-                <p tid="3"> More than a mere table of contents, the Degé Kangyur Catalogue is a detailed
-                    introduction to the Kangyur as a whole and this particular edition itself. It
-                    constitutes the entirety of the 103rd and final volume of the Kangyur and was
-                    written by the 8th Tai Situ, Chökyi Jungné (1700-1774 CE), who presided over the
-                    publication of the Degé Kangyur as its chief editor. The first three chapters of
-                    the catalog give a detailed history of Indian Buddhism and its arrival in Tibet
-                    while the final two give an account of all the texts included in the canon and
-                    an explanation of the merits of producing a Kangyur edition.</p>
+                <p tid="3"> More than a mere table of contents, the Degé Kangyur Catalogue is a detailed introduction to the Kangyur as a whole and this particular edition itself. It constitutes the
+                    entirety of the 103rd and final volume of the Kangyur and was written by the 8th Tai Situ, Chökyi Jungné (1700-1774 CE), who presided over the publication of the Degé Kangyur as
+                    its chief editor. The first three chapters of the catalog give a detailed history of Indian Buddhism and its arrival in Tibet while the final two give an account of all the texts
+                    included in the canon and an explanation of the merits of producing a Kangyur edition.</p>
             </div>
         </front>
     </text>
