--- a/translations/kangyur/placeholders/096-076_toh827,1108-verses_of_auspiciousness_of_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-076_toh827,1108-verses_of_auspiciousness_of_the_three_jewels.xml
@@ -15,12 +15,12 @@
                 <author role="translatorEng" xml:id="UT22084-096-076-18">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-076"/>
             </publicationStmt>
             <sourceDesc>
@@ -89,6 +89,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T07:34:13.069Z" type="text-version" status="0.0.7" xml:id="UT22084-096-076-20">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:14:45.5Z" type="translation-status" status="2.h" xml:id="UT22084-096-076-21">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:14:45.5Z" type="text-version" status="0.0.8" xml:id="UT22084-096-076-22">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
