--- a/translations/kangyur/placeholders/096-075_toh826,1103,4410-verses_of_auspiciousness.xml
+++ b/translations/kangyur/placeholders/096-075_toh826,1103,4410-verses_of_auspiciousness.xml
@@ -7,7 +7,9 @@
                 <title type="mainTitle" xml:lang="en">Verses of Auspiciousness</title>
                 <title key="4410" xml:lang="en" type="mainTitle">Verses of Auspiciousness for the Three Jewels and the Twelve Acts</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Maṅgalagāthā</title>
-                <title xml:lang="bo" type="mainTitle">བཀྲ་ཤིས་ཀྱི་ཚིགས་སུ་བཅད་པ།</title>
+                <title key="toh826" xml:lang="bo" type="mainTitle">བཀྲ་ཤིས་ཚིགས་སུ་བཅད་པ།</title>
+                <title key="toh1103" xml:lang="bo" type="mainTitle">བཀྲ་ཤིས་ཚིགས་སུ་བཅད་པ།</title>
+                <title key="toh4410" xml:lang="bo" type="mainTitle">བཀྲ་ཤིས་ཀྱི་ཚིགས་སུ་བཅད་པ།</title>
                 <title key="toh826" type="mainTitle" xml:lang="Bo-Ltn">bkra shis tshigs su bcad pa</title>
                 <title key="toh1103" type="mainTitle" xml:lang="Bo-Ltn">bkra shis tshigs su bcad pa</title>
                 <title key="toh4410" type="mainTitle" xml:lang="Bo-Ltn">bkra shis kyi tshigs su bcad pa</title>
@@ -15,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-075-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-075"/>
             </publicationStmt>
             <sourceDesc>
@@ -74,6 +76,12 @@
                 </change>
                 <change who="#celso" when="2024-09-27T14:03:09.975Z" type="text-version" status="0.0.4" xml:id="UT22084-096-075-8">
                     <desc>merged with Toh 4410</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:19:38.483Z" type="translation-status" status="2.h" xml:id="UT22084-096-075-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:19:38.483Z" type="text-version" status="0.0.5" xml:id="UT22084-096-075-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
