--- a/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-009-26">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-062-009"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-05T12:52:07.722Z" type="text-version" status="0.0.9" xml:id="UT22084-062-009-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-18T16:37:16.201Z" type="translation-status" status="2.d" xml:id="UT22084-062-009-32">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-18T16:37:16.201Z" type="text-version" status="0.0.10" xml:id="UT22084-062-009-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
