--- a/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
+++ b/translations/kangyur/translations/001-002_toh1-2-chapter_2_on_the_restoration_site.xml
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-001-002-17987">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2024</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -184,6 +184,9 @@
                 </change>
                 <change who="#andre" when="2024-11-01T13:36:22.101Z" type="text-version" status="1.0.7" xml:id="UT22084-001-002-17994">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#celso" when="2024-12-18T20:19:37.041Z" type="text-version" status="1.0.8" xml:id="UT22084-001-002-17995">
+                    <desc>Activated pending links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -734,8 +737,7 @@
                                 <p tid="60">“That should be repeated verbatim a second and third time.</p>
                                 <p tid="61">“The confessor should then say, ‘That is proper.’</p>
                                 <p tid="62">“The confessant should then reply, ‘Excellent.’ ”<note place="end" xml:id="UT22084-001-002-179">See <ptr target="#UT22084-001-002-685"/>-<ptr target="#UT22084-001-002-694"/>
-                                    </note>
-                                </p>
+                                    </note>.</p>
                             </q>
                             <milestone unit="chunk" xml:id="UT22084-001-002-180"/>
                             <p tid="63">For this reason, the present chapter is sometimes described as “the chapter on confession,”<note place="end" xml:id="UT22084-001-002-181"> See, e.g., the entries on “Monasticism” and “Repentance and Confession” in the
@@ -1063,7 +1065,7 @@
                                 remnants are described in <title xml:lang="en">The Chapter on Penitents</title>.<note place="end" xml:id="UT22084-001-002-239">
                                     <title xml:lang="Sa-Ltn">Pārivāsika­vastu</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-13.html">Toh 1, ch. 13</ref>. Punishments meted out on intransigent
                                     community members are the subject of three chapters within <title xml:lang="en">The Chapters on Monastic
-                                        Discipline</title> (Toh 1): <title xml:lang="en">The Chapter on the Monks of Kauśāmbī</title> (<title xml:lang="Sa-Ltn">Kauśāmbaka­vastu</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-9.html">Toh 1-9</ref>), <title xml:lang="en">The Chapter on a
+                                        Discipline</title> (Toh 1): <title xml:lang="en">The Chapter on the Monks of Kauśāmbī</title> (<title xml:lang="Sa-Ltn">Kauśāmbaka­vastu</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-9.html">Toh 1, ch. 9</ref>), <title xml:lang="en">The Chapter on a
                                         Group of Troublesome Monks</title> (<title xml:lang="Sa-Ltn">Pāṇḍulohitaka­vastu</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-11.html">Toh 1, ch. 11</ref>), and <title xml:lang="en">The Chapter
                                         on Types of Persons</title> (<title xml:lang="Sa-Ltn">Pudgalavastu</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-12.html">Toh 1, ch. 12</ref>).</note>
                             </p>
@@ -1090,7 +1092,7 @@
                                 and <foreign xml:lang="Pi-Ltn" type="term">guhā</foreign> (Hu-von Hinüber 1994, p. 189). These “five residences”
                                 correspond to the five “allowable places” (Skt. <foreign xml:lang="Sa-Ltn" type="term">kalpikaśālā</foreign>, Tib.
                                     <foreign xml:lang="Bo-Ltn" type="term">rung ba’i gnas</foreign>) discussed in <title xml:lang="en">The Chapter on
-                                    Medicines</title> (Toh 1 ch. 6), <ref target="https://read.84000.co/translation/toh1-6.html#UT22084-001-006-6877">10.14</ref> ff. See also Prebish 1974,
+                                    Medicines</title> (Toh 1, ch. 6), <ref target="https://read.84000.co/translation/toh1-6.html#UT22084-001-006-6877">10.14</ref> ff. See also Prebish 1974,
                                 p. 9.</note> In the event that there is no saṅgha elder, one must be invited to preside over the restoration. Thus,
                             this section also describes the protocol for receiving an upholder of the sūtras, the vinaya, or the mātṛkā. Next,
                             instructions are given on receiving the consent and profession of purity from sick monastics unable to attend the
@@ -1671,9 +1673,11 @@
                                 summon people to gather and carry the bier. For such an occasion, the gaṇḍī beam is struck in the <foreign xml:lang="Sa-Ltn" type="term">muṇḍikā</foreign>, i.e., two sustained rolls with no rap to punctuate the end of
                                 either roll, though some sources say it is struck in one sustained roll followed by one punctuating rap (Kalyāṇamitra,
                                     <ref rend="pending" target="https://read.84000.co/translation/toh4113.html">F.311.b.5–6</ref>). For more details
-                                on how the gaṇḍī beam is made, consecrated, and used, see <title xml:lang="en">
+                                    on how the gaṇḍī beam is made, consecrated, and used, see <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh298.html">The Gaṇḍī Sūtra</ref>
-                                </title> (Toh 298) and <title xml:lang="en">The Sūtra on Timings for the Gaṇḍī</title> (<ref rend="pending" target="https://read.84000.co/translation/toh299.html">Toh 299</ref>).</note> A ringing staff may serve as a gaṇḍī
+                                </title> (Toh 298) and <title xml:lang="en">
+                                    <ref target="https://read.84000.co/translation/toh299.html">The Sūtra on Timings for the Gaṇḍī</ref>
+                                </title> (Toh 299).</note> A ringing staff may serve as a gaṇḍī
                             beam for meditation.<note place="end" xml:id="UT22084-001-002-406"> See <title xml:lang="en">
                                     <ref target="https://read.84000.co/translation/toh335.html">The Sūtra on the Ringing Staff</ref>
                                 </title> (Toh 335),
@@ -2449,14 +2453,14 @@
                                 administration. He does, however, note the form Tib<foreign xml:lang="Bo-Ltn" type="term">. gnas mal stobs pa’i dge
                                     slong</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śayanāsanagrāhako bhikṣuḥ</foreign>; and Ch. <foreign xml:lang="Zh-Ltn" type="term">fenyoju bichu</foreign>
                                 <foreign xml:lang="zh">分臥具苾芻</foreign> from Yijing (Taishō 1445), which is attested in the Tib. and Skt. parallels of
-                                    <title xml:lang="en">The Chapter on the Rains</title> (<ref rend="pending" target="https://read.84000.co/translation/toh1-4.html">Toh 1-4</ref>) (Silk 2008, p. 201 and p. 201, n. 15).
-                                Schopen translates Tib. <foreign xml:lang="Bo-Ltn" type="term">gnas mal stobs pa’i dge slong</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śayanāsanagrāhako bhikṣuḥ</foreign> from Toh 1-4 as the “monk holder of bedding and
+                                <title xml:lang="en">The Chapter on the Rains</title> (Toh 1, <ref target="https://read.84000.co/translation/toh1-4.html#UT22084-001-004-532">ch. 4</ref>) (Silk 2008, p. 201 and p. 201, n. 15).
+                                Schopen translates Tib. <foreign xml:lang="Bo-Ltn" type="term">gnas mal stobs pa’i dge slong</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śayanāsanagrāhako bhikṣuḥ</foreign> from Toh 1, ch. 4 as the “monk holder of bedding and
                                 seating” (Schopen 2002, p. 364). Silk notices the Skt. and Tib. Mūlasarvāstivāda Vinaya’s mention of the position
                                 again in the <title xml:lang="Sa-Ltn">Kauśāmbaka­vastu</title> (<title xml:lang="en">The Chapter on the Monks of <ref target="https://read.84000.co/translation/toh1-1.html#UT22084-001-001-2776">Kauśāmbī</ref>
-                                </title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-9.html">Toh 1-9</ref>), and the <title xml:lang="Sa-Ltn">Śayanāsana­vastu</title> (<title xml:lang="en">The Chapter on Residences</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-15.html">Toh 1, ch. 15</ref>), where the Skt. <foreign xml:lang="Sa-Ltn" type="term">śayanāsanagrāhako bhikṣuḥ</foreign> is translated into Tibetan as <foreign xml:lang="Bo-Ltn" type="term">gnas mal ’gyed pa’ dge slong</foreign>, lit. “monk residence distributor.” Silk
+                                </title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-9.html">Toh 1, ch. 9</ref>), and the <title xml:lang="Sa-Ltn">Śayanāsana­vastu</title> (<title xml:lang="en">The Chapter on Residences</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1-15.html">Toh 1, ch. 15</ref>), where the Skt. <foreign xml:lang="Sa-Ltn" type="term">śayanāsanagrāhako bhikṣuḥ</foreign> is translated into Tibetan as <foreign xml:lang="Bo-Ltn" type="term">gnas mal ’gyed pa’ dge slong</foreign>, lit. “monk residence distributor.” Silk
                                 observes that the Pāli <title xml:lang="Pi-Ltn">Samantapāsādikā</title> distinguishes between the <foreign xml:lang="Pi-Ltn" type="term">senāsana-gāhāpaka</foreign> who distributes “bedding and seating” for the rains
                                 retreat and the <foreign xml:lang="Pi-Ltn" type="term">senāsana-paññapaka</foreign>, a temporary post filled by
-                                resident monks (Silk 2008, p. 108, n. 24). In his comments on Toh 1-4, Kalyāṇamitra explains that the “monk residence
+                                resident monks (Silk 2008, p. 108, n. 24). In his comments on Toh 1, ch. 4, Kalyāṇamitra explains that the “monk residence
                                 caretaker” must not lose the “bedding and seating” (Tib. <foreign xml:lang="Bo-Ltn" type="term">mal cha</foreign> and
                                     <foreign xml:lang="Bo-Ltn" type="term">stan</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śayana</foreign> and <foreign xml:lang="Sa-Ltn" type="term">āsana</foreign>), hence this position may also be
                                 translated “monk bedding and seating caretaker” as Schopen and Silk do. See Kalyāṇamitra (<ref rend="pending" target="https://read.84000.co/translation/toh4113.html">F.316.a</ref>): <foreign xml:lang="Bo-Ltn" type="quote">gnas mal bstabs pa zhes bya ba ni mal cha dang stan la sogs pa las mi dbral ba’o</foreign>. Note though that this
@@ -6708,7 +6712,7 @@
                     <bibl xml:id="UT22084-001-002-1659">————. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh299.html">The
                                 Sūtra on Timings for the Gaṇḍī</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Gaṇḍī­samayasūtra</title>, <title xml:lang="Bo-Ltn">gaN+DI’i mdo</title>, Toh 298). Translated by Lowell Cook. Online publication. 84000: Translating the
+                        </title> (<title xml:lang="Sa-Ltn">Gaṇḍī­samayasūtra</title>, <title xml:lang="Bo-Ltn">gaN+DI’i mdo</title>, Toh 299). Translated by Lowell Cook. Online publication. 84000: Translating the
                         Words of the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-001-002-1660">Altenburg, Gerjan Piet. “Rules of Customary Behavior in the Mūlasarvāstivāda-Vinaya. PhD
                         Diss., McMaster University, 2022.</bibl>
@@ -6857,13 +6861,13 @@
                             <note type="definition">
                                 <p>Lit. “should make amends.” Monks and nuns must confess offenses and “make amends” for them. The
                                     proper procedure for making amends for offenses is described in <title xml:lang="en">The Chapter on the
-                                        Restoration Rite</title> (Toh 1-2, <ptr target="#UT22084-001-002-699"/>), where the monastic acknowledges the
+                                        Restoration Rite</title> (Toh 1, ch. 2, <ptr target="#UT22084-001-002-699"/>), where the monastic acknowledges the
                                     fault and then resolves to refrain from such behavior in the future. In the Tengyur, the Tibetan verb is usually
                                     given as <foreign xml:lang="Bo-Ltn" type="term">phyir bcos pa</foreign>. In <title xml:lang="en">The Chapter on
                                         Lifting Restrictions</title>, the Skt. <foreign xml:lang="Sa-Ltn" type="term">pratikartavyā</foreign> is
                                     rendered in Tibetan as <foreign xml:lang="Bo-Ltn" type="term">slar bgyi’o</foreign>, as in the oft-repeated
                                     statement, “If I know of or see an offense, I will properly make amends for that offense in accord with the
-                                    Vinaya” (Toh 1-3, <ptr target="#UT22084-001-003-197"/>: <foreign xml:lang="Bo-Ltn" type="quote">ltung ba shes
+                                    Vinaya” (Toh 1, ch. 3, <ptr target="#UT22084-001-003-197"/>: <foreign xml:lang="Bo-Ltn" type="quote">ltung ba shes
                                         zhing mthong na chos bzhin ’dul ba bzhin slar bgyi’o</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="quote">jānaṃ paśyann āpattiṃ yathādharmaṃ yathāvinayaṃ pratikariṣye</foreign>).</p>
                             </note>
                         </gloss>
@@ -8141,7 +8145,7 @@
                                         <ref rend="pending" target="read.84000.co/translation/toh4113.html">F.318.a.2</ref>: <foreign xml:lang="Bo-Ltn" type="quote">byin gyis brlab po zhes bya ba ni dus gzhan du bya ba’i phyir dang/ gzhan par
                                         bya ba’o</foreign>. Certain items (such as the three robes and the begging bowl) must also be “sanctioned” by
                                     the preceptor at ordination or later by the monastic if they have left them elsewhere overnight. And, citing a
-                                    passage from <title xml:lang="en">The Chapter on the Restoration Rite</title> (Toh 1-2, <ptr target="#UT22084-001-002-426"/>), Kalyāṇamitra (Toh 4113, <ref rend="pending" target="read.84000.co/translation/toh4113.html">F.244.a</ref>) explains that every fortnight before performing
+                                    passage from <title xml:lang="en">The Chapter on the Restoration Rite</title> (Toh 1, ch. 2, <ptr target="#UT22084-001-002-426"/>), Kalyāṇamitra (Toh 4113, <ref rend="pending" target="read.84000.co/translation/toh4113.html">F.244.a</ref>) explains that every fortnight before performing
                                     the restoration rite, if they have not already done so, monastics should scrutinize themselves for things that
                                     should be curbed (Tib. <foreign xml:lang="Bo-Ltn" type="term">bsdam par bya ba</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">saṃvara­karaṇīya</foreign>), that is, subtle mental faults; things that should
                                     be confessed (Tib. <foreign xml:lang="Bo-Ltn" type="term">bshags par bya ba</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">deśanīya</foreign>), that is, simple atonements, confessable offenses, and
@@ -8221,7 +8225,7 @@
                                     other formal acts of saṅgha (such as the rites of restoration, lifting restrictions, and pledging to settle for
                                     the rains) may be performed there. Thus, an officially sanctioned monastic “site” is also described as an
                                     “allowable place” (Tib. <foreign xml:lang="Bo-Ltn" type="term">rung ba’i gnas</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">kalpikaśālā</foreign>) in <title xml:lang="en">The Chapter on Medicines</title>
-                                    (Toh 1-6, <ref target="https://read.84000.co/translation/toh1-6.html#UT22084-001-006-6877">10.14</ref> ff). In
+                                    (Toh 1, ch. 6, <ref target="https://read.84000.co/translation/toh1-6.html#UT22084-001-006-6877">10.14</ref> ff). In
                                     secondary scholarship, the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">āvāsa</foreign> or “site” has also been
                                     translated as “monastic district” and “colony.”</p>
                             </note>
