--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-066-011-24">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +89,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T13:01:24.7Z" type="text-version" status="0.0.11" xml:id="UT22084-066-011-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T07:51:13.643Z" type="translation-status" status="2.d" xml:id="UT22084-066-011-28">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T07:51:13.643Z" type="text-version" status="0.0.12" xml:id="UT22084-066-011-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
