--- a/translations/kangyur/placeholders/068-008_toh274-the_sutra_of_the_crown_ornament_of_the_buddhas.xml
+++ b/translations/kangyur/placeholders/068-008_toh274-the_sutra_of_the_crown_ornament_of_the_buddhas.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi dbu rgyan gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryabuddhamakuṭanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi dbu rgyan zhes bya ba theg pa chen po'i mdo chos kyi rnam grangs chen po</title>
-                <author role="translatorMain" xml:id="UT22084-068-008-1"/>
+                <author role="translatorMain" xml:id="UT22084-068-008-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-068-008-2">Sophie McGrath</author>
+                <editor role="projectEditor" xml:id="UT22084-068-008-15">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-068-008"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +63,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-24T13:19:45.842Z" type="text-version" status="0.0.6" xml:id="UT22084-068-008-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T13:20:49.848Z" type="text-version" status="0.0.7" xml:id="UT22084-068-008-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:26:49.193Z" type="translation-status" status="2.e" xml:id="UT22084-068-008-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:26:49.193Z" type="text-version" status="0.0.8" xml:id="UT22084-068-008-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
