--- a/translations/kangyur/placeholders/072-032_toh332-the_penthouse_sutra.xml
+++ b/translations/kangyur/placeholders/072-032_toh332-the_penthouse_sutra.xml
@@ -12,15 +12,15 @@
                 <author role="translatorEng" xml:id="UT22084-072-032-2">Meghan Howard</author>
                 <author role="translatorEng" xml:id="UT22084-072-032-3">Tracy Howard</author>
                 <consultant role="projectManager" xml:id="UT22084-072-032-4">Samantha Hung</consultant>
-                <author role="translatorEng" xml:id="UT22084-072-032-13">Laura Goetz</author>
+                <editor role="associateEditor" xml:id="UT22084-072-032-13">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-032"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +56,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-02T13:12:38.495Z" type="text-version" status="0.0.5" xml:id="UT22084-072-032-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:17:49.47Z" type="text-version" status="0.0.6" xml:id="UT22084-072-032-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:27:47.233Z" type="translation-status" status="2.e" xml:id="UT22084-072-032-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:27:47.233Z" type="text-version" status="0.0.7" xml:id="UT22084-072-032-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
