--- a/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
@@ -15,12 +15,12 @@
                 <editor role="projectEditor" xml:id="UT22084-083-011-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-083-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -70,6 +70,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-28T15:53:13.065Z" type="text-version" status="0.0.8" xml:id="UT22084-083-011-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:28:33.737Z" type="translation-status" status="2.e" xml:id="UT22084-083-011-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-19T13:28:33.737Z" type="text-version" status="0.0.9" xml:id="UT22084-083-011-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
