--- a/translations/kangyur/translations/039-004_toh48-the_teaching_on_dreams.xml
+++ b/translations/kangyur/translations/039-004_toh48-the_teaching_on_dreams.xml
@@ -38,7 +38,7 @@
                     Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -65,7 +65,7 @@
                     <biblScope>Degé Kangyur, vol. 39 (dkon brtsegs, ka), folios
                         203.b–237.a</biblScope>
                     <author role="translatorTib" xml:id="UT22084-039-004-533">Prajñāvarman</author>
-                    <author role="translatorTib" xml:id="UT22084-040-005-432">Yeshé Dé</author>
+                    <author role="translatorTib" xml:id="UT22084-039-004-652">Yeshé Dé</author>
                     <location work="UT4CZ5369" count-pages="68">
                         <volume number="39" start-page="406" end-page="473"/>
                     </location>
@@ -183,6 +183,9 @@
                 <change who="#sameer" when="2024-10-25T15:00:50.913Z" type="text-version" status="1.0.5" xml:id="UT22084-039-004-651">
                     <desc>Included in App v 3.19</desc>
                 </change>
+                <change who="#celso" when="2024-12-30T09:29:51.034Z" type="text-version" status="1.0.6" xml:id="UT22084-039-004-653">
+                    <desc>minor typo</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -217,7 +220,6 @@
                     84000: Translating the Words of the Buddha. Tom Tillemans and Ryan Damron edited
                     the translation and the introduction, and Ven. Konchog Norbu copyedited the
                     text. André Rodrigues was in charge of the digital publication process.</p>
-                <milestone unit="chunk" xml:id="UT22084-039-004-50"/>
                 <lb/>
                 <milestone unit="chunk" xml:id="UT22084-039-004-51"/>
                 <p tid="7">The translation of this text has been made possible through the generous
@@ -2751,7 +2753,7 @@
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-039-004-373"/>
                     <lg tid="256">
-                        <l>“It easier for a person who wants to live</l>
+                        <l>“It is easier for a person who wants to live</l>
                         <l>To drink from a sea of molten metal</l>
                         <l>Than for a bodhisattva to be harsh;</l>
                         <l>For them the suffering would be unfathomable. </l>
