--- a/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
+++ b/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-089-013-6">E E, May-E, Minda, Chung-Da Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -165,6 +165,9 @@
                 </change>
                 <change who="#celso" when="2024-11-28T13:46:07.176Z" type="text-version" status="1.0.5" xml:id="UT22084-089-013-3283">
                     <desc>minor edit to glossary</desc>
+                </change>
+                <change who="#celso" when="2024-12-30T18:59:30.682Z" type="text-version" status="1.0.6" xml:id="UT22084-089-013-3284">
+                    <desc>minor correction</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -959,7 +962,7 @@
                     <milestone unit="chunk" xml:id="UT22084-089-013-174"/>
                     <p tid="150">Among them were the bodhisattva Anāvaraṇa­dharma­cakra­varta, <ref cRef="F.152.b" type="folio" xml:id="UT22084-089-013-2954"/> the bodhisattva Aspiring to Always Turn the Dharma Wheel, the bodhisattva Nityodyukta, the
                         bodhisattva Anikṣiptadhura, the bodhisattva Maitreya, the bodhisattva Mañjuśrī, the bodhisattva Avalokiteśvara, the
-                        bodhisattva Dharaṇeśvararāja, the bodhisattva King Fearless Powerful Array, the bodhisattva King of Supreme Mount Meru, the
+                        bodhisattva Dharaṇīśvararāja, the bodhisattva King Fearless Powerful Array, the bodhisattva King of Supreme Mount Meru, the
                         bodhisattva Great Ocean Profound King, the bodhisattva <term>Ratnaketu</term>, the bodhisattva Mahāratnaketu, the bodhisattva
                         Kṣitigarbha, the bodhisattva Ākāśagarbha, the bodhisattva Lord with Jeweled Hands, the bodhisattva Vajrapāṇi, the bodhisattva
                         Ratibala, the bodhisattva Great Dharma Power,<note place="end" xml:id="UT22084-089-013-175"> Toh 555 has Dharmabala.</note>
@@ -12205,7 +12208,7 @@
                             <term xml:lang="Bo-Ltn" n="1">dge ’dun </term>
                             <term xml:lang="bo" n="1">དགེ་འདུན།</term>
                             <term xml:lang="Sa-Ltn" type="attestedSource">saṅgha</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p> Though often specifically reserved for the monastic community, this term can be applied to any
                                     of the four Buddhist communities‍—monks, nuns, laymen, and laywomen‍—as well as to identify the different groups
                                     of practitioners, like the community of bodhisattvas or the community of śrāvakas. It is also the third of the
@@ -13531,10 +13534,10 @@
                     </item>
                     <item>
                         <gloss type="person" xml:id="UT22084-089-013-2637">
-                            <term type="translationMain">Dharaṇeśvararāja</term>
+                        <term type="translationMain">Dharaṇīśvararāja</term>
                             <term xml:lang="Bo-Ltn" n="1">gzungs kyi dbang phyug rgyal po </term>
                             <term xml:lang="bo" n="1">གཟུངས་ཀྱི་དབང་ཕྱུག་རྒྱལ་པོ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedDictionary">dharaṇeśvararāja</term>
+                        <term xml:lang="Sa-Ltn" type="attestedDictionary">dharaṇīśvararāja</term>
                             <note type="definition">
                                 <p>A bodhisattva.</p>
                             </note>
