--- a/translations/kangyur/translations/091-010_toh613,989-the_dharani_of_the_goddess_cunda.xml
+++ b/translations/kangyur/translations/091-010_toh613,989-the_dharani_of_the_goddess_cunda.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-010-157">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -165,6 +165,9 @@
                 </change>
                 <change who="#andre" when="2024-11-28T14:22:58.903Z" type="text-version" status="1.0.1" xml:id="UT22084-091-010-161">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-12-31T19:58:57.446Z" type="text-version" status="1.0.2" xml:id="UT22084-091-010-162">
+                    <desc>updated Sanskrit.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -485,7 +488,7 @@
                             final member, the <foreign xml:lang="Sa-Ltn" type="term">kumbhāṇḍa
                                 graha</foreign>. </note> beings who are born from a womb; beings who
                         are born, transmigrate, and abide in a particular realm due to karma; any
-                        hostile beings who might harm me; and all manner of evil beings—<foreign xml:lang="Sa-Ltn">saṃdhaya saṃdhaya mardaya mardaya ṣośaya ṣośaya tāpaya
+                        hostile beings who might harm me; and all manner of evil beings—<foreign xml:lang="Sa-Ltn">saṃdhaya saṃdhaya mardaya mardaya śoṣaya śoṣaya tāpaya
                             tāpaya utsādhaya utsādhaya hana hana vajreṇa sara sara daṇḍena māraya
                             māraya khaḍgena<note place="end" xml:id="UT22084-091-010-86"> All
                                 Tibetan witnesses consulted for this translation read: <foreign xml:lang="Bo-Ltn" type="quote">kha k+ke na</foreign>. The
