--- a/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
+++ b/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-043-013-529">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -186,6 +186,9 @@
                 </change>
                 <change who="#sameer" when="2024-10-25T06:49:56.269Z" type="text-version" status="1.0.3" xml:id="UT22084-043-013-3342">
                     <desc>Included in App v 3.18</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-12-31T20:17:17.02Z" type="text-version" status="1.0.4" xml:id="UT22084-043-013-3343">
+                    <desc>updated typo.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1934,7 +1937,7 @@
                             <term xml:lang="bo" n="1">ཕྱིར་མི་ལྡོག་པ།</term>
                             <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avinivarta</term>
                             <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avaivartika</term>
-                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">aavinivartanīya</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avinivartanīya</term>
                             <note type="definition">
                                 <p>The stage on the bodhisattva path at which
                                     one will never turn back, or be turned back, from inevitable
@@ -1949,7 +1952,7 @@
                             <term xml:lang="bo" n="1">ཕྱིར་མི་ལྡོག་པ།</term>
                             <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avinivarta</term>
                             <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avaivartika</term>
-                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">aavinivartanīya</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">avinivartanīya</term>
                             <note type="definition">
                                 <p>See also “irreversibility.”</p>
                             </note>
